--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "https://github.com/zhiwei5576/excel-mcp-server.git"
   },
   "files": [
-    "dist"
+    "dist",
+    "README_CN.md"
   ],
   "scripts": {
     "start": "node dist/index.js",
