--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -23,7 +23,9 @@ jobs:
       - name: Create Test Release
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/**/*.js
+          files: |
+            dist/*.js
+            dist/**/*.js
           draft: true        # 设置为草稿模式
           prerelease: true   # 标记为预发布
           tag_name: v0.0.3  # 指定测试用的标签名
